--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body
 {
-    background-color: black;
+    background-color: orange;
 }
 
 img
 {
     content: url("pjes.png");
+    width: 343px;
+    content: url("png-transparent-paw-patrol-dog-dog-image-file-formats-animals-cartoon-thumbnail.png");
     width: 343px;
 
 }
