--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img
 
 }
 {
- content: url("png-transparent-paw-patrol-dog-dog-image-file-formats-animals-cartoon-thumbnail.png");
+ content: url("png-transparent-paw-patrol-dog-dog-image-file-formats-animals-cartoon-thumbnail.webp");
     width: 343px;
 }
 p 
